@@ -1,3 +1,11 @@
+2004-01-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/pipeline.hxx:
+  - Warning about syntax errors
+ src/pipeline.cxx:
+  - Better handling of awkward error situations
+ test/test072.cxx:
+  - Tests runtime error rather than SQL syntax error
+  - Succeeds now
 2004-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/pipeline.hxx:
   - Full test coverage
